<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="vertical" >


        <!-- ROW 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_3"/>
        </LinearLayout>




        <!-- ROW 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_6"/>
        </LinearLayout>

        <!-- ROW 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_8"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_9"/>
        </LinearLayout>


        <!-- ROW 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_default" />

            <ImageButton
                android:id="@+id/button_sound3_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_11"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_12"/>
        </LinearLayout>


        <!-- ROW 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_13"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_14"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_15"/>
        </LinearLayout>


        <!-- ROW 6 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_sound3_16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/button_default"
                android:background="@null" />

            <ImageButton
                android:id="@+id/button_sound3_18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:layout_weight="1"
                android:src="@drawable/button_default"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_16"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/button3_17"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/button3_18"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>





